+ [SMALL] - Ethos presentation no longer slides of screen. Disappears via display:none, this is a work arround solution because the off screen slide is reseting at the very top every time you use it, which is not normal behavior

--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ text-align: center;
 }
 
 .hideleft {
-    margin-left: -100% !important;
+    display: none;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     -o-transition: all 0.4s;
